[package]
name = "test-rust-api"
version = "0.1.0"
authors = ["Pavel Pauliushchyk <ppauliushchyk@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
diesel = { version = "1.3.3", features = ["postgres", "r2d2"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
